# libvmi-rust

./: .gitignore  Cargo.toml  README.md  deny.toml  implementation-plan.md  kvm-rust-kernel-module.md  kvm-vmi-methods.md  libvmi-overview.md  mindmap.md  project-structure.md  release-readiness.toml  rust-vmi-ecosystem.md  support-matrix.toml  xen-vmi-methods.md
.github/workflows/: ci.yml  fuzz.yml  qemu-release.yml  release.yml
crates/vmi/: Cargo.toml
crates/vmi-arch-aarch64/: Cargo.toml
crates/vmi-arch-aarch64/src/: lib.rs
crates/vmi-arch-amd64/: Cargo.toml
crates/vmi-arch-amd64/src/: lib.rs
crates/vmi-arch-api/: Cargo.toml
crates/vmi-arch-api/src/: lib.rs
crates/vmi-artifact/: Cargo.toml
crates/vmi-artifact/src/: lib.rs
crates/vmi-cli/: Cargo.toml
crates/vmi-cli/src/: main.rs
crates/vmi-core/: Cargo.toml
crates/vmi-core/src/: lib.rs
crates/vmi-driver-api/: Cargo.toml
crates/vmi-driver-api/src/: lib.rs
crates/vmi-driver-dump/: Cargo.toml
crates/vmi-driver-dump/src/: lib.rs
crates/vmi-driver-libvirt/: Cargo.toml
crates/vmi-driver-libvirt/src/: lib.rs
crates/vmi-driver-qemu/: Cargo.toml
crates/vmi-driver-qemu/proptest-regressions/: lib.txt
crates/vmi-driver-qemu/src/: lib.rs
crates/vmi-driver-snapshot/: Cargo.toml
crates/vmi-driver-snapshot/src/: lib.rs
crates/vmi-driver-virtualbox/: Cargo.toml
crates/vmi-driver-virtualbox/src/: lib.rs
crates/vmi-driver-xen/: Cargo.toml
crates/vmi-driver-xen/src/: lib.rs
crates/vmi-events/: Cargo.toml
crates/vmi-events/src/: lib.rs
crates/vmi-ffi/: Cargo.toml  build.rs
crates/vmi-ffi/examples/: read_raw.c
crates/vmi-ffi/include/: vmi.h
crates/vmi-ffi/src/: lib.rs
crates/vmi-ffi/tests/: c_smoke.c
crates/vmi-os-linux/: Cargo.toml
crates/vmi-os-linux/src/: lib.rs
crates/vmi-os-windows/: Cargo.toml
crates/vmi-os-windows/src/: lib.rs
crates/vmi-profile/: Cargo.toml
crates/vmi-profile/src/: lib.rs
crates/vmi-testkit/: Cargo.toml
crates/vmi-testkit/src/: fake_provider.rs  lib.rs
crates/vmi-testkit/tests/: contract.rs
crates/vmi-types/: Cargo.toml
crates/vmi-types/src/: address.rs  capability.rs  error.rs  lib.rs  primitive.rs  provider.rs  target.rs
crates/vmi-views/: Cargo.toml
crates/vmi-views/src/: lib.rs
crates/vmi/benches/: core.rs
crates/vmi/examples/: custom_provider.rs  inspect_raw.rs
crates/vmi/src/: lib.rs
docs/: README.md  compatibility-policy.md  current-implementation.md  development.md  fixture-policy.md  migration.md  operations.md  os-profile-qualification.md  performance-baselines.md  production-readiness.md  provider-authoring.md  public-api.txt  release-process.md  supply-chain-security.md  support-matrix.md  unsafe-code-inventory.md
docs/adr/: 0001-native-rust-api-and-deferred-c-abi.md  0002-capability-and-consistency-model.md  0003-reuse-licensing-msrv-and-unsafe-policy.md
docs/providers/: artifacts-and-secondary.md  libvirt-qemu.md  qemu.md  virtualbox.md  vmware.md  xen.md
docs/qualification/: libvirt-linux-process-inspection-2026-07-18.json  libvirt-linux-process-inspection-2026-07-18.md  libvirt-qemu-real-vm-2026-07-18.json  libvirt-qemu-real-vm-2026-07-18.md  libvirt-qemu-real-vm-features-2026-07-18.json
fuzz/: Cargo.toml  fixtures.toml
fuzz/corpus/artifact_parsers/: kdmp-signature  lime-signature
fuzz/corpus/text_profiles/: profile-json  system-map
fuzz/fuzz_targets/: artifact_parsers.rs  text_profiles.rs
reports/real-vm/: README.md  qemu-features.json  qemu-performance.json
reports/vmware-artifacts/: README.md  synthetic-qualification.json
scripts/: build-qemu.sh  compare-benchmark.py  generate-support-matrix.py  normalize-sbom.py  qualify-vmware-artifacts.py  run-benchmarks.sh  test-c-abi.sh  test-cli.sh  test-coverage.sh  test-fuzz-targets.sh  test-public-api.sh  test-qemu-integration.sh  test-qemu-performance.py  test-sanitizers.sh  test_compare_benchmark.py  test_differential_artifacts.py  test_fixtures.py  test_generate_support_matrix.py  test_markdown.py  test_normalize_sbom.py  test_package_metadata.py  test_panic_policy.py  test_qualify_vmware_artifacts.py  test_release_readiness.py  test_support_matrix.py  test_unsafe_policy.py  verify-fixtures.py  verify-markdown.py  verify-package-metadata.py  verify-panic-policy.py  verify-release-readiness.py  verify-support-matrix.py  verify-unsafe-policy.py
