[package]
name = "vmi-arch-amd64"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AMD64 address translation for virtual machine introspection"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
vmi-arch-api = { version = "=1.0.0", path = "../vmi-arch-api" }
vmi-driver-api = { version = "=1.0.0", path = "../vmi-driver-api" }
vmi-types = { version = "=1.0.0", path = "../vmi-types" }

[dev-dependencies]
proptest.workspace = true
