[package]
name = "vmi-arch-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Architecture-neutral address translation contracts for VMI"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
vmi-driver-api = { version = "=1.0.0", path = "../vmi-driver-api" }
vmi-types = { version = "=1.0.0", path = "../vmi-types" }
