[package]
name = "vmi-artifact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Safe parsers for virtual machine memory artifacts and snapshots"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
zstd = "0.13"
vmi-types = { version = "=1.0.0", path = "../vmi-types" }
