[package]
name = "vmi-driver-snapshot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Immutable snapshot providers for common hypervisor artifacts"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
vmi-artifact = { version = "=1.0.0", path = "../vmi-artifact" }
vmi-driver-api = { version = "=1.0.0", path = "../vmi-driver-api" }
vmi-types = { version = "=1.0.0", path = "../vmi-types" }
