[package]
name = "vmi-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded thread-safe event queues for virtual machine introspection"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
vmi-driver-api = { version = "=1.0.0", path = "../vmi-driver-api" }
vmi-types = { version = "=1.0.0", path = "../vmi-types" }
