[package]
name = "vmi-os-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Linux kernel object and process inspection adapters for VMI"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
vmi-arch-api = { version = "=1.0.0", path = "../vmi-arch-api" }
vmi-core = { version = "=1.0.0", path = "../vmi-core" }
vmi-profile = { version = "=1.0.0", path = "../vmi-profile" }
vmi-types = { version = "=1.0.0", path = "../vmi-types" }

[dev-dependencies]
vmi-driver-api = { version = "=1.0.0", path = "../vmi-driver-api" }
vmi-testkit = { version = "=1.0.0", path = "../vmi-testkit" }
