[package]
name = "vmi-profile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "System.map, normalized JSON, and PDB profiles for VMI"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
pdb = "0.8"
serde_json.workspace = true
vmi-types = { version = "=1.0.0", path = "../vmi-types" }
