[package]
name = "vmi-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic synthetic providers and contract tests for VMI"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
vmi-driver-api = { version = "=0.1.0", path = "../vmi-driver-api" }
vmi-types = { version = "=0.1.0", path = "../vmi-types" }

[dev-dependencies]
vmi-driver-api = { version = "=0.1.0", path = "../vmi-driver-api" }
vmi-types = { version = "=0.1.0", path = "../vmi-types" }
