[package]
name = "vmi-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared address, capability, target, and error types for VMI"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
