[package]
name = "vmi-views"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Thread-safe memory-view lifecycle management for VMI"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
vmi-driver-api = { version = "=0.1.0", path = "../vmi-driver-api" }
vmi-types = { version = "=0.1.0", path = "../vmi-types" }
